--- a/intl.zh-CN/快速入门/通过模板创建资源.md
+++ b/intl.zh-CN/快速入门/通过模板创建资源.md
@@ -1,60 +1,54 @@
-# 通过模板创建资源 {#concept_48749_zh .concept}
+# 通过模板创建资源 {#concept_48749_zh .task}
 
-资源编排（ROS）通过模板创建一组阿里云资源。ROS 把这组资源定义为一个栈（stack）。ROS 通过 stack 管理，维护这组阿里云的资源。
+资源编排（ROS）通过模板创建一组阿里云资源。ROS把每组资源定义为一个栈（stack）。ROS通过栈管理，分组维护阿里云资源。
 
-**说明：** 本文就将使用一个简单的 ROS 模板创建阿里云资源，然后在 ROS 的控制台管理维护这组资源。
+本文以**simple\_ecs\_instance**模板为例，为您介绍如何在ROS控制台上通过模板创建、管理和维护阿里云资源。ROS模板是JSON格式的文本文件。您可以在这个文本中定义自己的阿里云资源，例如安全组、ECS实例、VPC、RDS实例等。
 
-ROS 模板是 JSON 格式文本文件。您可以在这个文本中，申明和定义自己的阿里云资源，例如安全组、ECS、VPC、RDS 等等。
+1.  登录 [ROS控制台](http://ros.console.aliyun.com) 。
+2.  单击左侧导航栏中的**模板样例**，找到**simple\_ecs\_instance**模板。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23169/156593025555396_zh-CN.png)
 
-ROS 的控制台 提供一些常用的模版样例。本文档将介为您绍如何通过已有的模板样例中的模板来创建阿里云资源。
 
-1.  登录 [资源编排控制台](http://ros.console.aliyun.com) 。
-2.  单击左侧导航栏中的 **模板样例**，页面显示 资源编排提供的常用模板。本文以 **simple\_ecs\_instance** 为例。 从模板示例中找到 **simple\_ecs\_instance**，通过这个模板将创建一个 ECS 实例，并加入到一个安全组。 每个模板样例都有 **预览** 和 **创建栈** 按钮。
+3.  单击**预览**，模板会显示为JSON格式。 **simple\_ecs\_instance**模板的详细信息如下。
 
-    ![](http://docs-aliyun.cn-hangzhou.oss.aliyun-inc.com/assets/pic/48749/intl_zh/1516007075416/1.jpg)
-
-3.  单击 **预览** 按钮，模板会显示为 JSON 格式。simple\_ecs\_instance 模板的详细信息如下：
-
-    ``` {#codeblock_gjh_ng6_xjv .language-json}
+    ``` {#codeblock_l4u_m0s_vj0}
     {
       "ROSTemplateFormatVersion": "2015-09-01",
-      "Description": "One simple ECS instance and a security group. The user only needs to specify the image ID.",
+      "Description": "One simple ECS instance with a security group and a vSwitch in a VPC. The user only needs to specify the image ID.",
       "Parameters": {
         "ImageId": {
           "Type": "String",
-          "Default": "centos_7",
-          "Description": "Image Id, represents the image resource to startup one ECS instance."
-        },
-        "Password": {
-          "Type": "String",
-          "NoEcho": true,
-          "Default": "Test1234"
+          "Description": "Image Id, represents the image resource to startup one ECS instance,, <a href='#/product/cn-shenzhen/list/imageList' target='_blank'>View image resources</a>",
+          "Label": "ECS Image Id",
+          "Default": "centos_7"
         },
         "InstanceType": {
           "Type": "String",
           "Description": "The instance type",
-          "Default": "ecs.n4.large",
+          "Label": "ECS Instance Type",
+          "Default": "ecs.c5.large",
           "AllowedValues": [
-            "ecs.s1.small",
-            "ecs.n4.small",
-            "ecs.n4.large",
-            "ecs.n4.xlarge",
-            "ecs.mn4.small",
-            "ecs.mn4.large",
-            "ecs.mn4.xlarge",
-            "ecs.n1.small",
-            "ecs.n1.medium",
-            "ecs.n1.large"
+            "ecs.c5.large",
+            "ecs.g5.large",
+            "ecs.c5.xlarge",
+            "ecs.g5.xlarge"
           ]
+        },
+        "Password": {
+          "Type": "String",
+          "Description": "The login password of ECS instances",
+          "ConstraintDescription": "[8, 30] characters, consists of uppercase letter, lowercase letter and special characters.",
+          "Label": "ECS Instance Password",
+          "MaxLength": "30",
+          "MinLength": "8",
+          "AllowedPattern": "[a-zA-Z0-9-\\(\\)\\`\\~\\!@\\#\\$%\\^&\\*-+=\\|\\{\\}\\[\\]\\:\\;\\‘\\,\\.\\?\\/]*",
+          "NoEcho": true,
+          "Confirm": true
         }
       },
       "Resources": {
         "WebServer": {
           "Type": "ALIYUN::ECS::Instance",
           "Properties": {
-            "Password": {
-              "Ref": "Password"
-            },
             "ImageId": {
               "Ref": "ImageId"
             },
@@ -63,15 +57,57 @@ ROS 的控制台 提供一些常用的模版样例。本文档将介为您绍如
             },
             "SecurityGroupId": {
               "Ref": "SecurityGroup"
+            },
+            "PrivateIpAddress": "192.168.0.1",
+            "VSwitchId": {
+              "Ref": "vswitch"
+            },
+            "VpcId": {
+              "Ref": "vpc"
+            },
+            "Password": {
+              "Ref": "Password"
             }
           }
         },
+        "vswitch": {
+          "Type": "ALIYUN::ECS::VSwitch",
+          "Properties": {
+            "VpcId": {
+              "Ref": "vpc"
+            },
+            "ZoneId": {
+              "Fn::Select": [
+                "0",
+                {
+                  "Fn::GetAZs": {
+                    "Ref": "ALIYUN::Region"
+                  }
+                }
+              ]
+            },
+            "CidrBlock": "192.168.0.0/16"
+          }
+        },
         "SecurityGroup": {
-          "Type": "ALIYUN::ECS::SecurityGroup"
+          "Type": "ALIYUN::ECS::SecurityGroup",
+          "Properties": {
+            "VpcId": {
+              "Ref": "vpc"
+            }
+          }
+        },
+        "vpc": {
+          "Type": "ALIYUN::ECS::VPC",
+          "Properties": {
+            "CidrBlock": "192.168.0.0/16",
+            "VpcName": "simple_ecs_vpc"
+          }
         }
       },
       "Outputs": {
         "InstanceId": {
+          "Description": "The instance id of created ecs instance",
           "Value": {
             "Fn::GetAtt": [
               "WebServer",
@@ -80,6 +116,7 @@ ROS 的控制台 提供一些常用的模版样例。本文档将介为您绍如
           }
         },
         "PublicIp": {
+          "Description": "Public IP address of created ecs instance.",
           "Value": {
             "Fn::GetAtt": [
               "WebServer",
@@ -88,6 +125,7 @@ ROS 的控制台 提供一些常用的模版样例。本文档将介为您绍如
           }
         },
         "SecurityGroupId": {
+          "Description": "generated security group id for security group.",
           "Value": {
             "Fn::GetAtt": [
               "SecurityGroup",
@@ -96,30 +134,31 @@ ROS 的控制台 提供一些常用的模版样例。本文档将介为您绍如
           }
         }
       }
-    }               
+    }
     ```
 
-    这个 JSON 文本包含五个顶级字段：
+    这个JSON文本包含5个一级字段：
 
-     `"ROSTemplateFormatVersion" : "2015-09-01"` 定义模板版本。 `"Description": "一个简配的 ECS 实例，包括一个安全组，用户只需要指定imageId"` 定义对模板的解释说明。 `"Parameters" : { }` 定义模板的一些参数。本例中定义了镜像 ID 的参数，实例规格的参数，并指定了默认值。 `"Resources" : { }` 定义这个模板将要创建的阿里云资源。本例中申明将要创建一个 ECS 实例和一个安全组；这里申明的资源属性可以引用 `Parameters` 中定义的参数。 `"Outputs": { }` 定义资源创建完成后，通过 ROS 的栈输出资源信息。本例中，将输出 ECS 实例的 ID、公网 IP 和安全组 ID。
+    -   `"ROSTemplateFormatVersion"`定义模板的版本。
+    -   `"Description"`定义模板的解释说明。
+    -   `"Parameters" : { }`定义模板的参数。本例定义了镜像ID和实例规格等参数，并指定了参数的默认值。
+    -   `"Resources" : { }`定义模板可创建的阿里云资源。本例将创建一个ECS实例和一个安全组，资源属性将引用`Parameters`中定义的参数。
+    -   `"Outputs": { }`定义资源创建完成后，通过ROS输出栈的资源信息。本例将输出ECS实例的ID、公网IP和安全组ID。
+4.  单击**创建栈**，开始创建您的资源栈。
+5.  在**选择地域（region）**的下拉框中选择您的目标地域，单击**下一步**。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23169/156593025555418_zh-CN.png)
 
-4.  单击 **创建 stack**，开始创建您的资源栈。在 **所在 region** 的下拉框中，选择 **region**，然后单击右下角 **下一步**。
 
-    ![](http://docs-aliyun.cn-hangzhou.oss.aliyun-inc.com/assets/pic/48749/intl_zh/1516007757330/2.jpg)
+6.  填写**栈名**，单击**创建**。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1345908/156593025555555_zh-CN.png)
 
-5.  给您将要创建的这组资源指定一个唯一的 stack 名称，其他项可保持默认值不变。然后单击 **创建**。
 
-    ![](http://docs-aliyun.cn-hangzhou.oss.aliyun-inc.com/assets/pic/48749/intl_zh/1516007899659/2.jpg)
+7.  单击**管理**，进入栈的管理页面。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/1345908/156593025655572_zh-CN.jpg)
 
-    资源创建需要一定时间，请等待创建完成。创建成功后，可以单击左侧的 **资源栈管理** 查看 stack 的状态。可查看 `Outputs` 中定义的值。本例中 stack 的输出情况：
 
-    ![](http://docs-aliyun.cn-hangzhou.oss.aliyun-inc.com/assets/pic/48749/intl_zh/1516008065019/2.jpg)
+8.  在栈的管理页面，查看栈的详情。 
+    -   单击左侧导航栏中的**概览**，查看栈的概况。
+    -   单击左侧导航栏中的**资源**，查看栈中所有资源。
+    -   单击左侧导航栏中的**事件**，查看创建栈时的相关操作。如有操作失败，此处也会显示具体的失败原因。
+    -   单击左侧导航栏中的**模板**，查看栈的原始模板。
 
-    -   单击左侧导航栏中 **资源**，可以查看 stack 中的所有资源。
-    -   单击左侧导航栏中 **事件**，可以查看 ROS 创建这个资源栈的时候的相关操作。如果任何涉及资源栈的操作失败了，这里也会显示具体哪个资源操作失败的原因。
-    -   单击左侧导航栏中 **模板**，可以查看资源栈的原始模板。
-
-以上示例只是通过 ROS 的文本模板快速创建资源，ROS 也可以通过用户指定的模板 URL 地址创建资源。除此之外，可通过 ROS 管理资源。您可以删除自己的资源组，或者只删除 stack 而保留资源。还能根据自己的需求更新资源栈，重新检查资源栈的状态等。
-
-**说明：** 阿里云规定创建按量付费的资源，例如本例的 ECS 实例，账号中需要有超过 100 元的现金余额、可用信用额度、或者可用于开通产品的代金券。如果创建失败，请检查您的账户可用资金是否不足 100 元。
+ROS可以通过用户指定的模板URL地址创建资源栈。您可以通过ROS管理资源，删除资源或者只删除栈而保留资源，也可以根据自己的需求更新资源栈，重新检查资源栈的状态等。
 
