--- a/cn.zh-CN/API参考（新）/签名机制.md
+++ b/cn.zh-CN/API参考（新）/签名机制.md
@@ -4,18 +4,18 @@
 
 **说明：** 
 
--   AccessKey相当于用户密码，AccessKey用于调用API，而用户密码用于登录ROS控制台。其中AccessKeyID是访问者身份，AccessKeySecret是加密签名字符串和服务器端验证签名字符串的密钥，必须严格保密谨防泄露。更多详情，请参见[创建AccessKey](../../../../intl.zh-CN/通用参考/创建AccessKey.md#)。
+-   AccessKey相当于用户密码，AccessKey用于调用API，而用户密码用于登录ROS控制台。其中AccessKeyID是访问者身份，AccessKeySecret是加密签名字符串和服务器端验证签名字符串的密钥，必须严格保密谨防泄露。更多详情，请参见[创建AccessKey](../../../../cn.zh-CN/通用参考/创建AccessKey.md#)。
 -   资源编排ROS提供了多种编程语言的SDK及第三方SDK，可以免去您签名的烦恼。更多详情，请下载[SDK](https://github.com/aliyun)。
 
 ## 步骤一：构造规范化请求字符串 {#section_czy_tyb_wdb .section}
 
-1.  排序参数。排序规则以首字母顺序排序，排序参数包括[公共参数](intl.zh-CN/API参考（新）/公共参数.md#)和接口自定义参数，不包括公共请求参数中的`Signature`参数。
+1.  排序参数。排序规则以首字母顺序排序，排序参数包括[公共参数](cn.zh-CN/API参考（新）/公共参数.md#)和接口自定义参数，不包括公共请求参数中的`Signature`参数。
 
     **说明：** 当使用GET方法提交请求时，这些参数就是请求URL中的参数部分，即URL中`?`之后由`&`连接的部分。
 
 2.  编码参数。使用UTF-8字符集按照[RFC3986](http://tools.ietf.org/html/rfc3986)规则编码请求参数和参数取值，编码规则如下：
     -   字符A~Z、a~z、0~9以及字符`-`、`_`、`.`、`~`不编码。
-    -   其它字符编码成`%XY`的格式，其中`XY`是字符对应ASCII码的16进制。示例：半角双引号（`"`）对应`%22`。
+    -   其它字符编码成`%XY`的格式，其中`XY`是字符对应ASCII码的16进制。例如，半角双引号（`"`）对应`%22`。
     -   扩展的UTF-8字符，编码成`%XY%ZA…`的格式。
     -   空格（ ）编码成`%20`，而不是加号（`+`）。
 
@@ -33,11 +33,11 @@
 3.  使用等号（`=`）连接编码后的请求参数和参数取值。
 4.  使用与号（`&`）连接编码后的请求参数，注意参数排序与[步骤1](http:///)一致。
 
-现在，您得到了规范化请求字符串（CanonicalizedQueryString），其结构遵循[请求语法](intl.zh-CN/API参考（新）/调用方式.md#section_ow0_qmi_l2m)。
+现在，您得到了规范化请求字符串（CanonicalizedQueryString），其结构遵循[请求语法](cn.zh-CN/API参考（新）/调用方式.md#section_ow0_qmi_l2m)。
 
 ## 步骤二：构造签名字符串 {#StringToSign .section}
 
-1.  构造待签名字符串`StringToSign`。您可以同样使用`percentEncode`处理上一步构造的规范化请求字符串，规则如下：
+1.  构造待签名字符串`StringToSign`。您可以同样使用`percentEncode`处理上一步构造的规范化请求字符串，规则如下。
 
     ``` {#codeblock_ztt_swi_mza}
     StringToSign=
@@ -52,13 +52,13 @@
     Signature = Base64( HMAC-SHA1( AccessSecret, UTF-8-Encoding-Of(StringToSign) ) )
     ```
 
-    **说明：** 计算签名时，RFC2104规定的Key值是您的`AccessKeySecret`并加上与号（`&`），其ASCII值为38。更多详情，请参见[创建AccessKey](../../../../intl.zh-CN/通用参考/创建AccessKey.md#)。
+    **说明：** 计算签名时，RFC2104规定的Key值是您的`AccessKeySecret`并加上与号（`&`），其ASCII值为38。更多详情，请参见[创建AccessKey](../../../../cn.zh-CN/通用参考/创建AccessKey.md#)。
 
 3.  添加根据[RFC3986](http://tools.ietf.org/html/rfc3986)规则编码后的参数`Signature`到规范化请求字符串URL中。
 
 ## 示例一：参数拼接法 {#section_rzy_tyb_wdb .section}
 
-以调用[DescribeRegions](intl.zh-CN/API参考（新）/其他接口/DescribeRegions.md#)查询地域为例。假设您获得了`AccessKeyID=testid`以及`AccessKeySecret=testsecret`，签名流程如下所示：
+以调用[DescribeRegions](cn.zh-CN/API参考（新）/其他接口/DescribeRegions.md#)查询地域为例。假设您获得了`AccessKeyID=testid`以及`AccessKeySecret=testsecret`，签名流程如下所示：
 
 1.  构造规范化请求字符串。
 
@@ -89,7 +89,7 @@
 
 ## 示例二：编程语言法 {#section_xzy_tyb_wdb .section}
 
-依然以调用[DescribeRegions](intl.zh-CN/API参考（新）/其他接口/DescribeRegions.md#)查询地域为例。假设您获得了AccessKeyID=testid以及AccessKeySecret=testsecret，并且假定所有请求参数放在一个Java `Map<String, String>`对象里。
+依然以调用[DescribeRegions](cn.zh-CN/API参考（新）/其他接口/DescribeRegions.md#)查询地域为例。假设您获得了`AccessKeyID=testid`以及`AccessKeySecret=testsecret`，并且假定所有请求参数放在一个Java `Map<String, String>`对象里。
 
 1.  预定义编码方法。
 
@@ -158,7 +158,7 @@
     String signature = new String(Base64.encodeBase64(signData));
     ```
 
-    增加签名参数后，按照[RFC3986](http://tools.ietf.org/html/rfc3986)规则编码后的URL如下所示：
+    增加签名参数后，按照[RFC3986](http://tools.ietf.org/html/rfc3986)规则编码后的URL如下所示。
 
     ``` {#codeblock_w9k_3om_1nu}
     http://ros.aliyuncs.com/?SignatureVersion=1.0&Action=DescribeRegions&Format=XML&SignatureNonce=3ee8c1b8-83d3-44af-a94f-4e0ad82fd6cf&Version=2019-09-10&AccessKeyId=testid&Signature=OLeaidS1JvxuMvnyHOwuJ%2BuX5qY%3D&SignatureMethod=HMAC-SHA1&Timestamp=2019-08-23T12%253A46%253A24Z
