--- a/cn.zh-CN/API参考（新）/公共参数.md
+++ b/cn.zh-CN/API参考（新）/公共参数.md
@@ -8,14 +8,14 @@
 
 |名称|类型|是否必需|描述|
 |:-|:-|:---|:-|
-|Action|String|是|API 的名称。取值范围请参见[API 概览](intl.zh-CN/API参考（新）/API概览.md#)。|
-|AccessKeyId|String|是|访问密钥 ID。AccessKey 用于调用 API，而用户密码用于登录 。|
-|Signature|String|是|您的签名。详情请参见[签名机制](intl.zh-CN/API参考（新）/签名机制.md#)。|
+|Action|String|是|API的名称。取值范围请参见[API 概览](cn.zh-CN/API参考（新）/API概览.md#)。|
+|AccessKeyId|String|是|访问密钥 ID。AccessKey用于调用 API，而用户密码用于登录 。|
+|Signature|String|是|您的签名。详情请参见[签名机制](cn.zh-CN/API参考（新）/签名机制.md#)。|
 |SignatureMethod|String|是|签名方式。取值范围：HMAC-SHA1。|
 |SignatureVersion|String|是|签名算法版本。取值范围：1.0。|
 |SignatureNonce|String|是|签名唯一随机数。用于防止网络重放攻击，建议您每一次请求都使用不同的随机数。|
 |Timestamp|String|是|请求的时间戳。示例：`2018-01-01T12:00:00Z`表示北京时间2018年01月01日20点00分00秒。|
-|Version|String|是|API的版本号，格式为 YYYY-MM-DD。取值范围：2019-09-10。|
+|Version|String|是|API的版本号，格式为YYYY-MM-DD。取值范围：2019-09-10。|
 |Format|String|否|返回参数的语言类型。取值范围：json、xml。默认值：xml。|
 
 ## 请求示例 {#section_xbw_lxb_wdb .section}
