--- a/intl.zh-CN/常用工具/命令行工具/快速安装.md
+++ b/intl.zh-CN/常用工具/命令行工具/快速安装.md
@@ -1,10 +1,10 @@
 # 快速安装 {#concept_57843_zh .concept}
 
-资源编排支持命令行工具，支持通过命令行工具对资源栈进行创建，删除、更新，查看等操作。
+资源编排支持通过命令行工具对资源栈进行创建、删除、更新、查看等操作。
 
 ## 概述 {#section_nmk_1lx_kfb .section}
 
-您可以通过下载安装包或者直接编译源码的方式来安装阿里云CLI，下面为您介绍下载安装包的方式，如需通过直接编码的方式来安装阿里云CLI， 请参考[../../SP\_525/DNICMS19101929/ZH-CN\_TP\_475354\_V1.dita\#task\_592879](../../SP_525/DNICMS19101929/ZH-CN_TP_475354_V1.dita#task_592879)。
+您可以通过下载安装包或者直接编译源码的方式来安装阿里云CLI。下面为您介绍下载安装包的方式，如需通过直接编码的方式来安装阿里云CLI， 请参见[../../SP\_525/DNICMS19101929/ZH-CN\_TP\_475354\_V1.dita\#task\_592879](../../SP_525/DNICMS19101929/ZH-CN_TP_475354_V1.dita#task_592879)。
 
 阿里云命令行工具CLI支持在Windows、Linux和MacOS（x64版本）多系统上安装使用。您可以查看表格中不同安装方式对应的文档内容，并学习安装指南中的操作步骤，完成对阿里云CLI的安装。
 
@@ -17,10 +17,12 @@
  |
 |编译源码|[../../SP\_525/DNICMS19101929/ZH-CN\_TP\_475354\_V1.dita\#task\_592879](../../SP_525/DNICMS19101929/ZH-CN_TP_475354_V1.dita#task_592879)|
 
+**说明：** 您可以自行选择阿里云CLI的版本进行安装，需要说明的是`3.0.25`及以上的版本只支持新版ROS API，`3.0.25`以下的版本只支持旧版ROS API。
+
 ## 使用场景 {#section_nd2_dlx_kfb .section}
 
 -   无法使用控制台情况下。
--   API 级别的开发、调试，比如查看资源栈，删除资源栈，查看资源类型等。
+-   API 级别的开发、调试，例如查看资源栈，删除资源栈，查看资源类型等。
 
 ## 下载安装阿里云CLI {#section_z8p_j1h_r75 .section}
 
@@ -28,33 +30,33 @@
 
 ## Windows平台操作步骤 {#section_z8p_j1h_r75 .section}
 
--   您可以登录到 [官网](https://aliyuncli.alicdn.com/aliyun-cli-windows-3.0.16-amd64.zip) 或者 [GitHub](https://github.com/aliyun/aliyun-cli/releases) 的下载页面，下载名为aliyun-cli-windows-3.0.16-amd64.zip的Windows终端安装包。
--   解压aliyun-cli-windows-3.0.16-amd64.zip文件，获取名为aliyun.exe的可执行文件。
--   配置环境变量。您需要将aliyun.exe文件所在目录的路径添加到Path环境变量中。
-    -   进入环境变量图形界面，在用户变量集中，选择键为Path的环境变量，并单击编辑。
-    -   输入aliyun.exe文件所在目录的路径。
-    -   单击两次确定，应用更改。
-    -   打开终端，并执行如下命令查看环境变量是否配置成功。
+1.  您可以登录[官网](https://aliyuncli.alicdn.com/aliyun-cli-windows-3.0.16-amd64.zip)或者[GitHub](https://github.com/aliyun/aliyun-cli/releases)的下载页面，下载名为aliyun-cli-windows-3.0.16-amd64.zip的Windows终端安装包。
+2.  解压aliyun-cli-windows-3.0.16-amd64.zip文件，获取名为aliyun.exe的可执行文件。
+3.  配置环境变量。您需要将aliyun.exe文件所在目录的路径添加到Path环境变量中。
+    1.  进入环境变量图形界面，在用户变量集中，选择键为Path的环境变量，并单击编辑。
+    2.  输入aliyun.exe文件所在目录的路径。
+    3.  单击两次确定，应用更改。
+    4.  打开终端，并执行如下命令查看环境变量是否配置成功。
 
-        CMD终端: [试用](https://api.aliyun.com/new#/tutorial?id=121510)
+        CMD终端： [试用](https://api.aliyun.com/new#/tutorial?id=121510)
 
         ``` {#codeblock_mxt_4ex_3w6 .language-cmd}
         set path
         ```
 
-        PowerShell终端: [试用](https://api.aliyun.com/new#/tutorial?id=121510)
+        PowerShell终端：[试用](https://api.aliyun.com/new#/tutorial?id=121510)
 
         ``` {#codeblock_owa_jha_kq1 .language-powershell}
         env:path
         ```
 
--   在终端执行如下命令，验证阿里云CLI是否安装成功。 [试用](https://api.aliyun.com/new#/tutorial?id=121510)
+4.  在终端执行如下命令，验证阿里云CLI是否安装成功。 [试用](https://api.aliyun.com/new#/tutorial?id=121510) 
 
     ``` {#codeblock_mxt_4ex_3w6 .language-powershell}
     aliyun version
     ```
 
-    系统显示类似如下阿里云CLI当前版本号，表示安装成功。
+    如果系统显示类似如下的阿里云CLI当前版本号，则表示安装成功。
 
     ``` {#codeblock_mxt_4ex_3w6 .language-powershell}
     3.0.16
@@ -63,8 +65,8 @@
 
 ## Linux平台操作步骤 {#section_z8p_j1h_r75 .section}
 
--   您可以登录到 [官网](https://aliyuncli.alicdn.com/aliyun-cli-windows-3.0.16-amd64.zip) 或者 [GitHub](https://github.com/aliyun/aliyun-cli/releases) 的下载页面，下载名为aliyun-cli-linux-3.0.16-amd64.tgz的Linux终端安装包
--   执行如下命令，解压aliyun-cli-linux-3.0.16-amd64.tgz文件，获取名为aliyun的可执行文件。
+1.  您可以登录到[官网](https://aliyuncli.alicdn.com/aliyun-cli-windows-3.0.16-amd64.zip)或者[GitHub](https://github.com/aliyun/aliyun-cli/releases)的下载页面，下载名为aliyun-cli-linux-3.0.16-amd64.tgz的Linux终端安装包。
+2.  执行如下命令，解压aliyun-cli-linux-3.0.16-amd64.tgz文件，获取名为aliyun的可执行文件。
 
     ``` {#codeblock_mxt_4ex_3w6 .language-bash}
     cd $HOME/aliyun
@@ -73,7 +75,7 @@
 
     **说明：** 假设已经下载到了$HOME/aliyun目录中，并解压到此目录下。
 
--   执行如下命令，将aliyun程序移至/usr/local/bin目录中。 [试用](https://api.aliyun.com/new#/tutorial?id=121541) 
+3.  执行如下命令，将aliyun程序移至/usr/local/bin目录中。 [试用](https://api.aliyun.com/new#/tutorial?id=121541) 
 
     ``` {#codeblock_mxt_4ex_3w6 .language-bash}
     sudo cp aliyun /usr/local/bin
@@ -84,8 +86,8 @@
 
 ## MacOs平台操作步骤 {#section_z8p_j1h_r75 .section}
 
--   您可以登录到 [官网](https://aliyuncli.alicdn.com/aliyun-cli-windows-3.0.16-amd64.zip) 或者 [GitHub](https://github.com/aliyun/aliyun-cli/releases) 的下载页面，下载名为aliyun-cli-macosx-3.0.16-amd64.tgz的MacOS终端安装包
--   执行如下命令，解压aliyun-cli-macosx-3.0.16-amd64.tgz文件，获取名为aliyun的可执行文件。
+1.  您可以登录到 [官网](https://aliyuncli.alicdn.com/aliyun-cli-windows-3.0.16-amd64.zip)或者[GitHub](https://github.com/aliyun/aliyun-cli/releases)的下载页面，下载名为aliyun-cli-macosx-3.0.16-amd64.tgz的MacOS终端安装包
+2.  执行如下命令，解压aliyun-cli-macosx-3.0.16-amd64.tgz文件，获取名为aliyun的可执行文件。
 
     ``` {#codeblock_mxt_4ex_3w6 .language-bash}
     cd $HOME/aliyun
@@ -94,7 +96,7 @@
 
     **说明：** 假设已经下载到了$HOME/aliyun目录中，并解压到此目录下。
 
--   执行如下命令，将aliyun程序移至/usr/local/bin目录中。 [试用](https://api.aliyun.com/new#/tutorial?id=121544) 
+3.  执行如下命令，将aliyun程序移至/usr/local/bin目录中。 [试用](https://api.aliyun.com/new#/tutorial?id=121544) 
 
     ``` {#codeblock_mxt_4ex_3w6 .language-bash}
     sudo cp aliyun /usr/local/bin
@@ -122,12 +124,12 @@
 
 ## 配置凭证方式 {#section_z8p_j1h_r75 .section}
 
-在阿里云CLI中配置凭证时，您可以选择如下两种配置方式，并自行指定配置的凭证类型。下面介绍交互式配置方式AccessKey凭证；非交互式配置及其他配置详情，请参考[配置凭证方式](../../../../intl.zh-CN/配置阿里云CLI/配置凭证/简介.md#section_vfn_jja_bsk)。
+在阿里云CLI中配置凭证时，您可以选择如下两种配置方式，并自行指定配置的凭证类型。下面介绍交互式配置方式AccessKey凭证；非交互式配置及其他配置详情，请参见[配置凭证方式](../../../../intl.zh-CN/配置阿里云CLI/配置凭证/简介.md#section_vfn_jja_bsk)。
 
 -   交互式配置（快速配置）：此配置过程方便快速，您只需要根据提示信息输入相应的值即可。
 -   非交互式配置：即单命令行配置方式，您需要指定配置名称、凭证类型和对应凭证所需的鉴权信息等。
 
-交互式配置简介
+**交互式配置简介**
 
 使用configure命令来配置凭证。其命令格式如下：
 
