--- a/cn.zh-CN/常用工具/命令行工具/快速安装.md
+++ b/cn.zh-CN/常用工具/命令行工具/快速安装.md
@@ -86,7 +86,7 @@
 
 ## MacOs平台操作步骤 {#section_z8p_j1h_r75 .section}
 
-1.  您可以登录到 [官网](https://aliyuncli.alicdn.com/aliyun-cli-windows-3.0.16-amd64.zip)或者[GitHub](https://github.com/aliyun/aliyun-cli/releases)的下载页面，下载名为aliyun-cli-macosx-3.0.16-amd64.tgz的MacOS终端安装包
+1.  您可以登录到 [官网](https://aliyuncli.alicdn.com/aliyun-cli-windows-3.0.16-amd64.zip)或者[GitHub](https://github.com/aliyun/aliyun-cli/releases)的下载页面，下载名为aliyun-cli-macosx-3.0.16-amd64.tgz的MacOS终端安装包。
 2.  执行如下命令，解压aliyun-cli-macosx-3.0.16-amd64.tgz文件，获取名为aliyun的可执行文件。
 
     ``` {#codeblock_mxt_4ex_3w6 .language-bash}
