--- a/intl.zh-CN/资源类型/资源类型索引.md
+++ b/intl.zh-CN/资源类型/资源类型索引.md
@@ -2,202 +2,207 @@
 
 本文为您提供资源类型索引，便于您进行查询。
 
-|API Gateway| -   [ALIYUN::ApiGateway::Api](intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Api.md#)
--   [ALIYUN::ApiGateway::App](intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::App.md#)
--   [ALIYUN::ApiGateway::Authorization](intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Authorization.md#)
--   [ALIYUN::ApiGateway::CustomDomain](intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::CustomDomain.md#)
--   [ALIYUN::ApiGateway::Deployment](intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Deployment.md#)
--   [ALIYUN::ApiGateway::Group](intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Group.md#)
--   [ALIYUN::ApiGateway::Signature](intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Signature.md#)
--   [ALIYUN::ApiGateway::SignatureBinding](intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::SignatureBinding.md#)
--   [ALIYUN::ApiGateway::StageConfig](intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::StageConfig.md#)
--   [ALIYUN::ApiGateway::TrafficControl](intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::TrafficControl.md#)
--   [ALIYUN::ApiGateway::TrafficControlBinding](intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::TrafficControlBinding.md#)
--   [ALIYUN::ApiGateway::VpcAccessConfig](intl.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::VpcAccessConfig.md#)
+|API Gateway| -   [ALIYUN::ApiGateway::Api](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Api.md#)
+-   [ALIYUN::ApiGateway::App](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::App.md#)
+-   [ALIYUN::ApiGateway::Authorization](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Authorization.md#)
+-   [ALIYUN::ApiGateway::CustomDomain](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::CustomDomain.md#)
+-   [ALIYUN::ApiGateway::Deployment](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Deployment.md#)
+-   [ALIYUN::ApiGateway::Group](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Group.md#)
+-   [ALIYUN::ApiGateway::Signature](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Signature.md#)
+-   [ALIYUN::ApiGateway::SignatureBinding](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::SignatureBinding.md#)
+-   [ALIYUN::ApiGateway::StageConfig](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::StageConfig.md#)
+-   [ALIYUN::ApiGateway::TrafficControl](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::TrafficControl.md#)
+-   [ALIYUN::ApiGateway::TrafficControlBinding](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::TrafficControlBinding.md#)
+-   [ALIYUN::ApiGateway::VpcAccessConfig](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::VpcAccessConfig.md#)
 
  |
-|ActionTrail| -   [ALIYUN::ACTIONTRAIL::Trail](intl.zh-CN/资源类型/ActionTrail/ALIYUN::ACTIONTRAIL::Trail.md#)
--   [ALIYUN::ACTIONTRAIL::TrailLogging](intl.zh-CN/资源类型/ActionTrail/ALIYUN::ACTIONTRAIL::TrailLogging.md#)
+|ActionTrail| -   [ALIYUN::ACTIONTRAIL::Trail](cn.zh-CN/资源类型/ActionTrail/ALIYUN::ACTIONTRAIL::Trail.md#)
+-   [ALIYUN::ACTIONTRAIL::TrailLogging](cn.zh-CN/资源类型/ActionTrail/ALIYUN::ACTIONTRAIL::TrailLogging.md#)
 
  |
-|BSS| -   [ALIYUN::BSS::WaitOrder](intl.zh-CN/资源类型/BSS/ALIYUN::BSS::WaitOrder.md#)
+|BSS| -   [ALIYUN::BSS::WaitOrder](cn.zh-CN/资源类型/BSS/ALIYUN::BSS::WaitOrder.md#)
 
  |
-|CDN| -   [ALIYUN::CDN::Domain](intl.zh-CN/资源类型/CDN/ALIYUN::CDN::Domain.md#)
--   [ALIYUN::CDN::DomainConfig](intl.zh-CN/资源类型/CDN/ALIYUN::CDN::DomainConfig.md#)
+|CDN| -   [ALIYUN::CDN::Domain](cn.zh-CN/资源类型/CDN/ALIYUN::CDN::Domain.md#)
+-   [ALIYUN::CDN::DomainConfig](cn.zh-CN/资源类型/CDN/ALIYUN::CDN::DomainConfig.md#)
 
  |
-|CEN| -   [ALIYUN::CEN::CenInstance](intl.zh-CN/资源类型/CEN/ALIYUN::CEN::CenInstance.md#)
--   [ALIYUN::CEN::CenInstanceAttachment](intl.zh-CN/资源类型/CEN/ALIYUN::CEN::CenInstanceAttachment.md#)
--   [ALIYUN::CEN::CenBandwidthPackage](intl.zh-CN/资源类型/CEN/ALIYUN::CEN::CenBandwidthPackage.md#)
--   [ALIYUN::CEN::CenBandwidthPackageAssociation](intl.zh-CN/资源类型/CEN/ALIYUN::CEN::CenBandwidthPackageAssociation.md#)
--   [ALIYUN::CEN::CenBandwidthLimit](intl.zh-CN/资源类型/CEN/ALIYUN::CEN::CenBandwidthLimit.md#)
--   [ALIYUN::CEN::RouteEntry](intl.zh-CN/资源类型/CEN/ALIYUN::CEN::RouteEntry.md#)
+|CEN| -   [ALIYUN::CEN::CenInstance](cn.zh-CN/资源类型/CEN/ALIYUN::CEN::CenInstance.md#)
+-   [ALIYUN::CEN::CenInstanceAttachment](cn.zh-CN/资源类型/CEN/ALIYUN::CEN::CenInstanceAttachment.md#)
+-   [ALIYUN::CEN::CenBandwidthPackage](cn.zh-CN/资源类型/CEN/ALIYUN::CEN::CenBandwidthPackage.md#)
+-   [ALIYUN::CEN::CenBandwidthPackageAssociation](cn.zh-CN/资源类型/CEN/ALIYUN::CEN::CenBandwidthPackageAssociation.md#)
+-   [ALIYUN::CEN::CenBandwidthLimit](cn.zh-CN/资源类型/CEN/ALIYUN::CEN::CenBandwidthLimit.md#)
+-   [ALIYUN::CEN::RouteEntry](cn.zh-CN/资源类型/CEN/ALIYUN::CEN::RouteEntry.md#)
 
  |
-|CMS| -   [ALIYUN::CMS::MonitorGroup](intl.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitorGroup.md#)
+|CMS| -   [ALIYUN::CMS::MonitorGroup](cn.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitorGroup.md#)
 
  |
-|CS| -   [ALIYUN::CS::App](intl.zh-CN/资源类型/CS/ALIYUN::CS::App.md#)
--   [ALIYUN::CS::Cluster](intl.zh-CN/资源类型/CS/ALIYUN::CS::Cluster.md#)
+|CS| -   [ALIYUN::CS::App](cn.zh-CN/资源类型/CS/ALIYUN::CS::App.md#)
+-   [ALIYUN::CS::Cluster](cn.zh-CN/资源类型/CS/ALIYUN::CS::Cluster.md#)
 
  |
-|DNS| -   [ALIYUN::DNS::Domain](intl.zh-CN/资源类型/DNS/ALIYUN::DNS::Domain.md#)
--   [ALIYUN::DNS::DomainGroup](intl.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainGroup.md#)
--   [ALIYUN::DNS::DomainRecord](intl.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainRecord.md#)
+|DNS| -   [ALIYUN::DNS::Domain](cn.zh-CN/资源类型/DNS/ALIYUN::DNS::Domain.md#)
+-   [ALIYUN::DNS::DomainGroup](cn.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainGroup.md#)
+-   [ALIYUN::DNS::DomainRecord](cn.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainRecord.md#)
 
  |
-|ECS| -   [ALIYUN::ECS::AutoSnapshotPolicy](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::AutoSnapshotPolicy.md#)
--   [ALIYUN::ECS::BandwidthPackage](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::BandwidthPackage.md#)
--   [ALIYUN::ECS::Command](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::Command.md#)
--   [ALIYUN::ECS::CopyImage](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::CopyImage.md#)
--   [ALIYUN::ECS::CustomImage](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::CustomImage.md#)
--   [ALIYUN::ECS::DedicatedHost](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::DedicatedHost.md#)
--   [ALIYUN::ECS::DeploymentSet](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::DeploymentSet.md#)
--   [ALIYUN::ECS::ForwardEntry](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::ForwardEntry.md#)
--   [ALIYUN::ECS::Instance](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::Instance.md#)
--   [ALIYUN::ECS::InstanceClone](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::InstanceClone.md#)
--   [ALIYUN::ECS::InstanceGroup](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::InstanceGroup.md#)
--   [ALIYUN::ECS::InstanceGroupClone](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::InstanceGroupClone.md#)
--   [ALIYUN::ECS::Invocation](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::Invocation.md#)
--   [ALIYUN::ECS::JoinSecurityGroup](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::JoinSecurityGroup.md#)
--   [ALIYUN::ECS::LaunchTemplate](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::LaunchTemplate.md#)
--   [ALIYUN::ECS::NatGateway](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::NatGateway.md#)
--   [ALIYUN::ECS::NetworkInterface](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::NetworkInterface.md#)
--   [ALIYUN::ECS::NetworkInterfaceAttachment](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::NetworkInterfaceAttachment.md#)
--   [ALIYUN::ECS::NetworkInterfacePermission](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::NetworkInterfacePermission.md#)
--   [ALIYUN::ECS::PrepayInstance](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::PrepayInstance.md#)
--   [ALIYUN::ECS::PrepayInstanceGroupClone](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::PrepayInstanceGroupClone.md#)
--   [ALIYUN::ECS::Route](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::Route.md#)
--   [ALIYUN::ECS::SNatEntry](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::SNatEntry.md#)
--   [ALIYUN::ECS::SecurityGroup](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroup.md#)
--   [ALIYUN::ECS::SecurityGroupClone](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroupClone.md#)
--   [ALIYUN::ECS::SecurityGroupEgress](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroupEgress.md#)
--   [ALIYUN::ECS::SecurityGroupIngress](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroupIngress.md#)
--   [ALIYUN::ECS::Snapshot](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::Snapshot.md#)
--   [ALIYUN::ECS::SSHKeyPair](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::SSHKeyPair.md#)
--   [ALIYUN::ECS::SSHKeyPairAttachment](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::SSHKeyPairAttachment.md#)
--   [ALIYUN::ECS::VPC](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::VPC.md#)
--   [ALIYUN::ECS::VSwitch](intl.zh-CN/资源类型/ECS/ALIYUN::ECS::VSwitch.md#)
+|ECS| -   [ALIYUN::ECS::AutoSnapshotPolicy](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::AutoSnapshotPolicy.md#)
+-   [ALIYUN::ECS::BandwidthPackage](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::BandwidthPackage.md#)
+-   [ALIYUN::ECS::Command](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Command.md#)
+-   [ALIYUN::ECS::CopyImage](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::CopyImage.md#)
+-   [ALIYUN::ECS::CustomImage](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::CustomImage.md#)
+-   [ALIYUN::ECS::DedicatedHost](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::DedicatedHost.md#)
+-   [ALIYUN::ECS::DeploymentSet](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::DeploymentSet.md#)
+-   [ALIYUN::ECS::Disk](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Disk.md#)
+-   [ALIYUN::ECS::DiskAttachment](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::DiskAttachment.md#)
+-   [ALIYUN::ECS::ForwardEntry](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::ForwardEntry.md#)
+-   [ALIYUN::ECS::Instance](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Instance.md#)
+-   [ALIYUN::ECS::InstanceClone](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::InstanceClone.md#)
+-   [ALIYUN::ECS::InstanceGroup](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::InstanceGroup.md#)
+-   [ALIYUN::ECS::InstanceGroupClone](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::InstanceGroupClone.md#)
+-   [ALIYUN::ECS::Invocation](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Invocation.md#)
+-   [ALIYUN::ECS::JoinSecurityGroup](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::JoinSecurityGroup.md#)
+-   [ALIYUN::ECS::LaunchTemplate](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::LaunchTemplate.md#)
+-   [ALIYUN::ECS::NatGateway](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::NatGateway.md#)
+-   [ALIYUN::ECS::NetworkInterface](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::NetworkInterface.md#)
+-   [ALIYUN::ECS::NetworkInterfaceAttachment](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::NetworkInterfaceAttachment.md#)
+-   [ALIYUN::ECS::NetworkInterfacePermission](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::NetworkInterfacePermission.md#)
+-   [ALIYUN::ECS::PrepayInstance](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::PrepayInstance.md#)
+-   [ALIYUN::ECS::PrepayInstanceGroupClone](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::PrepayInstanceGroupClone.md#)
+-   [ALIYUN::ECS::Route](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Route.md#)
+-   [ALIYUN::ECS::SNatEntry](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SNatEntry.md#)
+-   [ALIYUN::ECS::SecurityGroup](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroup.md#)
+-   [ALIYUN::ECS::SecurityGroupClone](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroupClone.md#)
+-   [ALIYUN::ECS::SecurityGroupEgress](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroupEgress.md#)
+-   [ALIYUN::ECS::SecurityGroupIngress](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroupIngress.md#)
+-   [ALIYUN::ECS::Snapshot](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Snapshot.md#)
+-   [ALIYUN::ECS::SSHKeyPair](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SSHKeyPair.md#)
+-   [ALIYUN::ECS::SSHKeyPairAttachment](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SSHKeyPairAttachment.md#)
+-   [ALIYUN::ECS::VPC](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::VPC.md#)
+-   [ALIYUN::ECS::VSwitch](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::VSwitch.md#)
 
  |
-|ESS| -   [ALIYUN::ESS::AlarmTask](intl.zh-CN/资源类型/ESS/ALIYUN::ESS::AlarmTask.md#)
--   [ALIYUN::ESS::AlarmTaskEnable](intl.zh-CN/资源类型/ESS/ALIYUN::ESS::AlarmTaskEnable.md#)
--   [ALIYUN::ESS::LifecycleHook](intl.zh-CN/资源类型/ESS/ALIYUN::ESS::LifecycleHook.md#)
--   [ALIYUN::ESS::ScalingConfiguration](intl.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingConfiguration.md#)
--   [ALIYUN::ESS::ScalingGroup](intl.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingGroup.md#)
--   [ALIYUN::ESS::ScalingGroupEnable](intl.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingGroupEnable.md#)
--   [ALIYUN::ESS::ScalingRule](intl.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingRule.md#)
--   [ALIYUN::ESS::ScheduledTask](intl.zh-CN/资源类型/ESS/ALIYUN::ESS::ScheduledTask.md#)
+|EMR| -   [ALIYUN::EMR::Cluster](cn.zh-CN/资源类型/EMR/ALIYUN::EMR::Cluster.md#)
 
  |
-|FC| -   [ALIYUN::FC::CustomDomain](intl.zh-CN/资源类型/FC/ALIYUN::FC::CustomDomain.md#)
--   [ALIYUN::FC::Function](intl.zh-CN/资源类型/FC/ALIYUN::FC::Function.md#)
--   [ALIYUN::FC::FunctionInvoker](intl.zh-CN/资源类型/FC/ALIYUN::FC::FunctionInvoker.md#)
--   [ALIYUN::FC::Service](intl.zh-CN/资源类型/FC/ALIYUN::FC::Service.md#)
--   [ALIYUN::FC::Trigger](intl.zh-CN/资源类型/FC/ALIYUN::FC::Trigger.md#)
+|ESS| -   [ALIYUN::ESS::AlarmTask](cn.zh-CN/资源类型/ESS/ALIYUN::ESS::AlarmTask.md#)
+-   [ALIYUN::ESS::AlarmTaskEnable](cn.zh-CN/资源类型/ESS/ALIYUN::ESS::AlarmTaskEnable.md#)
+-   [ALIYUN::ESS::LifecycleHook](cn.zh-CN/资源类型/ESS/ALIYUN::ESS::LifecycleHook.md#)
+-   [ALIYUN::ESS::ScalingConfiguration](cn.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingConfiguration.md#)
+-   [ALIYUN::ESS::ScalingGroup](cn.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingGroup.md#)
+-   [ALIYUN::ESS::ScalingGroupEnable](cn.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingGroupEnable.md#)
+-   [ALIYUN::ESS::ScalingRule](cn.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingRule.md#)
+-   [ALIYUN::ESS::ScheduledTask](cn.zh-CN/资源类型/ESS/ALIYUN::ESS::ScheduledTask.md#)
 
  |
-|KMS| -   [ALIYUN::KMS::Key](intl.zh-CN/资源类型/KMS/ALIYUN::KMS::Key.md#)
--   [ALIYUN::KMS::Alias](intl.zh-CN/资源类型/KMS/ALIYUN::KMS::Alias.md#)
+|FC| -   [ALIYUN::FC::CustomDomain](cn.zh-CN/资源类型/FC/ALIYUN::FC::CustomDomain.md#)
+-   [ALIYUN::FC::Function](cn.zh-CN/资源类型/FC/ALIYUN::FC::Function.md#)
+-   [ALIYUN::FC::FunctionInvoker](cn.zh-CN/资源类型/FC/ALIYUN::FC::FunctionInvoker.md#)
+-   [ALIYUN::FC::Service](cn.zh-CN/资源类型/FC/ALIYUN::FC::Service.md#)
+-   [ALIYUN::FC::Trigger](cn.zh-CN/资源类型/FC/ALIYUN::FC::Trigger.md#)
 
  |
-|MarketPlace| -   [ALIYUN::MarketPlace::Image](intl.zh-CN/资源类型/MarketPlace/ALIYUN::MarketPlace::Image.md#)
--   [ALIYUN::MarketPlace::ImageSubscription](intl.zh-CN/资源类型/MarketPlace/ALIYUN::MarketPlace::ImageSubscription.md#)
--   [ALIYUN::MarketPlace::Order](intl.zh-CN/资源类型/MarketPlace/ALIYUN::MarketPlace::Order.md#)
+|KMS| -   [ALIYUN::KMS::Key](cn.zh-CN/资源类型/KMS/ALIYUN::KMS::Key.md#)
+-   [ALIYUN::KMS::Alias](cn.zh-CN/资源类型/KMS/ALIYUN::KMS::Alias.md#)
 
  |
-|Memcache| -   [ALIYUN::MEMCACHE::Instance](intl.zh-CN/资源类型/Memcache/ALIYUN::MEMCACHE::Instance.md#)
+|MarketPlace| -   [ALIYUN::MarketPlace::Image](cn.zh-CN/资源类型/MarketPlace/ALIYUN::MarketPlace::Image.md#)
+-   [ALIYUN::MarketPlace::ImageSubscription](cn.zh-CN/资源类型/MarketPlace/ALIYUN::MarketPlace::ImageSubscription.md#)
+-   [ALIYUN::MarketPlace::Order](cn.zh-CN/资源类型/MarketPlace/ALIYUN::MarketPlace::Order.md#)
 
  |
-|MNS| -   [ALIYUN::MNS::Queue](intl.zh-CN/资源类型/MNS/ALIYUN::MNS::Queue.md#)
--   [ALIYUN::MNS::Subscription](intl.zh-CN/资源类型/MNS/ALIYUN::MNS::Subscription.md#)
--   [ALIYUN::MNS::Topic](intl.zh-CN/资源类型/MNS/ALIYUN::MNS::Topic.md#)
+|Memcache| -   [ALIYUN::MEMCACHE::Instance](cn.zh-CN/资源类型/Memcache/ALIYUN::MEMCACHE::Instance.md#)
 
  |
-|MongoDB| -   [ALIYUN::MONGODB::Instance](intl.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::Instance.md#)
--   [ALIYUN::MONGODB::PrepayInstance](intl.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::PrepayInstance.md#)
+|MNS| -   [ALIYUN::MNS::Queue](cn.zh-CN/资源类型/MNS/ALIYUN::MNS::Queue.md#)
+-   [ALIYUN::MNS::Subscription](cn.zh-CN/资源类型/MNS/ALIYUN::MNS::Subscription.md#)
+-   [ALIYUN::MNS::Topic](cn.zh-CN/资源类型/MNS/ALIYUN::MNS::Topic.md#)
 
  |
-|NAS| -   [ALIYUN::NAS::AccessGroup](intl.zh-CN/资源类型/NAS/ALIYUN::NAS::AccessGroup.md#)
--   [ALIYUN::NAS::AccessRule](intl.zh-CN/资源类型/NAS/ALIYUN::NAS::AccessRule.md#)
--   [ALIYUN::NAS::FileSystem](intl.zh-CN/资源类型/NAS/ALIYUN::NAS::FileSystem.md#)
--   [ALIYUN::NAS::MountTarget](intl.zh-CN/资源类型/NAS/ALIYUN::NAS::MountTarget.md#)
+|MongoDB| -   [ALIYUN::MONGODB::Instance](cn.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::Instance.md#)
+-   [ALIYUN::MONGODB::PrepayInstance](cn.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::PrepayInstance.md#)
 
  |
-|OSS| -   [ALIYUN::OSS::Bucket](intl.zh-CN/资源类型/OSS/ALIYUN::OSS::Bucket.md#)
+|NAS| -   [ALIYUN::NAS::AccessGroup](cn.zh-CN/资源类型/NAS/ALIYUN::NAS::AccessGroup.md#)
+-   [ALIYUN::NAS::AccessRule](cn.zh-CN/资源类型/NAS/ALIYUN::NAS::AccessRule.md#)
+-   [ALIYUN::NAS::FileSystem](cn.zh-CN/资源类型/NAS/ALIYUN::NAS::FileSystem.md#)
+-   [ALIYUN::NAS::MountTarget](cn.zh-CN/资源类型/NAS/ALIYUN::NAS::MountTarget.md#)
 
  |
-|OTS| -   [ALIYUN::OTS::Instance](intl.zh-CN/资源类型/OTS/ALIYUN::OTS::Instance.md#)
--   [ALIYUN::OTS::VpcBinder](intl.zh-CN/资源类型/OTS/ALIYUN::OTS::VpcBinder.md#)
+|OSS| -   [ALIYUN::OSS::Bucket](cn.zh-CN/资源类型/OSS/ALIYUN::OSS::Bucket.md#)
 
  |
-|PVTZ| -   [ALIYUN::PVTZ::Zone](intl.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::Zone.md#)
--   [ALIYUN::PVTZ::ZoneRecord](intl.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneRecord.md#)
--   [ALIYUN::PVTZ::ZoneVpcBinder](intl.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneVpcBinder.md#)
+|OTS| -   [ALIYUN::OTS::Instance](cn.zh-CN/资源类型/OTS/ALIYUN::OTS::Instance.md#)
+-   [ALIYUN::OTS::VpcBinder](cn.zh-CN/资源类型/OTS/ALIYUN::OTS::VpcBinder.md#)
 
  |
-|RAM| -   [ALIYUN::RAM::AccessKey](intl.zh-CN/资源类型/RAM/ALIYUN::RAM::AccessKey.md#)
--   [ALIYUN::RAM::AttachPolicyToRole](intl.zh-CN/资源类型/RAM/ALIYUN::RAM::AttachPolicyToRole.md#)
--   [ALIYUN::RAM::Group](intl.zh-CN/资源类型/RAM/ALIYUN::RAM::Group.md#)
--   [ALIYUN::RAM::ManagedPolicy](intl.zh-CN/资源类型/RAM/ALIYUN::RAM::ManagedPolicy.md#)
--   [ALIYUN::RAM::Role](intl.zh-CN/资源类型/RAM/ALIYUN::RAM::Role.md#)
--   [ALIYUN::RAM::User](intl.zh-CN/资源类型/RAM/ALIYUN::RAM::User.md#)
--   [ALIYUN::RAM::UserToGroupAddition](intl.zh-CN/资源类型/RAM/ALIYUN::RAM::UserToGroupAddition.md#)
+|PVTZ| -   [ALIYUN::PVTZ::Zone](cn.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::Zone.md#)
+-   [ALIYUN::PVTZ::ZoneRecord](cn.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneRecord.md#)
+-   [ALIYUN::PVTZ::ZoneVpcBinder](cn.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneVpcBinder.md#)
 
  |
-|RDS| -   [ALIYUN::RDS::Account](intl.zh-CN/资源类型/RDS/ALIYUN::RDS::Account.md#)
--   [ALIYUN::RDS::AccountPrivilege](intl.zh-CN/资源类型/RDS/ALIYUN::RDS::AccountPrivilege.md#)
--   [ALIYUN::RDS::DBInstance](intl.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstance.md#)
--   [ALIYUN::RDS::DBInstanceParameterGroup](intl.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstanceParameterGroup.md#)
--   [ALIYUN::RDS::DBInstanceSecurityIps](intl.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstanceSecurityIps.md#)
--   [ALIYUN::RDS::PrepayDBInstance](intl.zh-CN/资源类型/RDS/ALIYUN::RDS::PrepayDBInstance.md#)
+|RAM| -   [ALIYUN::RAM::AccessKey](cn.zh-CN/资源类型/RAM/ALIYUN::RAM::AccessKey.md#)
+-   [ALIYUN::RAM::AttachPolicyToRole](cn.zh-CN/资源类型/RAM/ALIYUN::RAM::AttachPolicyToRole.md#)
+-   [ALIYUN::RAM::Group](cn.zh-CN/资源类型/RAM/ALIYUN::RAM::Group.md#)
+-   [ALIYUN::RAM::ManagedPolicy](cn.zh-CN/资源类型/RAM/ALIYUN::RAM::ManagedPolicy.md#)
+-   [ALIYUN::RAM::Role](cn.zh-CN/资源类型/RAM/ALIYUN::RAM::Role.md#)
+-   [ALIYUN::RAM::User](cn.zh-CN/资源类型/RAM/ALIYUN::RAM::User.md#)
+-   [ALIYUN::RAM::UserToGroupAddition](cn.zh-CN/资源类型/RAM/ALIYUN::RAM::UserToGroupAddition.md#)
 
  |
-|Redis| -   [ALIYUN::REDIS::Instance](intl.zh-CN/资源类型/Redis/ALIYUN::REDIS::Instance.md#)
--   [ALIYUN::REDIS::PrepayInstance](intl.zh-CN/资源类型/Redis/ALIYUN::REDIS::PrepayInstance.md#)
+|RDS| -   [ALIYUN::RDS::Account](cn.zh-CN/资源类型/RDS/ALIYUN::RDS::Account.md#)
+-   [ALIYUN::RDS::AccountPrivilege](cn.zh-CN/资源类型/RDS/ALIYUN::RDS::AccountPrivilege.md#)
+-   [ALIYUN::RDS::DBInstance](cn.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstance.md#)
+-   [ALIYUN::RDS::DBInstanceParameterGroup](cn.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstanceParameterGroup.md#)
+-   [ALIYUN::RDS::DBInstanceSecurityIps](cn.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstanceSecurityIps.md#)
+-   [ALIYUN::RDS::PrepayDBInstance](cn.zh-CN/资源类型/RDS/ALIYUN::RDS::PrepayDBInstance.md#)
 
  |
-|ROS| -   [ALIYUN::ROS::WaitCondition](intl.zh-CN/资源类型/ROS/ALIYUN::ROS::WaitCondition.md#)
--   [ALIYUN::ROS::WaitConditionHandle](intl.zh-CN/资源类型/ROS/ALIYUN::ROS::WaitConditionHandle.md#)
--   [ALIYUN::ROS::Stack](intl.zh-CN/资源类型/ROS/ALIYUN::ROS::Stack.md#)
+|Redis| -   [ALIYUN::REDIS::Instance](cn.zh-CN/资源类型/Redis/ALIYUN::REDIS::Instance.md#)
+-   [ALIYUN::REDIS::PrepayInstance](cn.zh-CN/资源类型/Redis/ALIYUN::REDIS::PrepayInstance.md#)
 
  |
-|SAG| -   [ALIYUN::SAG::CloudConnectNetwork](intl.zh-CN/资源类型/SAG/ALIYUN::SAG::CloudConnectNetwork.md#)
--   [ALIYUN::SAG::ACL](intl.zh-CN/资源类型/SAG/ALIYUN::SAG::ACL.md#)
--   [ALIYUN::SAG::ACLAssociation](intl.zh-CN/资源类型/SAG/ALIYUN::SAG::ACLAssociation.md#)
--   [ALIYUN::SAG::ACLRule](intl.zh-CN/资源类型/SAG/ALIYUN::SAG::ACLRule.md#)
--   [ALIYUN::SAG::SmartAccessGatewayBinding](intl.zh-CN/资源类型/SAG/ALIYUN::SAG::SmartAccessGatewayBinding.md#)
+|ROS| -   [ALIYUN::ROS::WaitCondition](cn.zh-CN/资源类型/ROS/ALIYUN::ROS::WaitCondition.md#)
+-   [ALIYUN::ROS::WaitConditionHandle](cn.zh-CN/资源类型/ROS/ALIYUN::ROS::WaitConditionHandle.md#)
+-   [ALIYUN::ROS::Stack](cn.zh-CN/资源类型/ROS/ALIYUN::ROS::Stack.md#)
 
  |
-|SLB| -   [ALIYUN::SLB::AccessControl](intl.zh-CN/资源类型/SLB/ALIYUN::SLB::AccessControl.md#)
--   [ALIYUN::SLB::BackendServerAttachment](intl.zh-CN/资源类型/SLB/ALIYUN::SLB::BackendServerAttachment.md#)
--   [ALIYUN::SLB::BackendServerToVServerGroupAddition](intl.zh-CN/资源类型/SLB/ALIYUN::SLB::BackendServerToVServerGroupAddition.md#)
--   [ALIYUN::SLB::Certificate](intl.zh-CN/资源类型/SLB/ALIYUN::SLB::Certificate.md#)
--   [ALIYUN::SLB::DomainExtension](intl.zh-CN/资源类型/SLB/ALIYUN::SLB::DomainExtension.md#)
--   [ALIYUN::SLB::Listener](intl.zh-CN/资源类型/SLB/ALIYUN::SLB::Listener.md#)
--   [ALIYUN::SLB::LoadBalancer](intl.zh-CN/资源类型/SLB/ALIYUN::SLB::LoadBalancer.md#)
--   [ALIYUN::SLB::LoadBalancerClone](intl.zh-CN/资源类型/SLB/ALIYUN::SLB::LoadBalancerClone.md#)
--   [ALIYUN::SLB::MasterSlaveServerGroup](intl.zh-CN/资源类型/SLB/ALIYUN::SLB::MasterSlaveServerGroup.md#)
--   [ALIYUN::SLB::Rule](intl.zh-CN/资源类型/SLB/ALIYUN::SLB::Rule.md#)
--   [ALIYUN::SLB::VServerGroup](intl.zh-CN/资源类型/SLB/ALIYUN::SLB::VServerGroup.md#)
+|SAG| -   [ALIYUN::SAG::CloudConnectNetwork](cn.zh-CN/资源类型/SAG/ALIYUN::SAG::CloudConnectNetwork.md#)
+-   [ALIYUN::SAG::ACL](cn.zh-CN/资源类型/SAG/ALIYUN::SAG::ACL.md#)
+-   [ALIYUN::SAG::ACLAssociation](cn.zh-CN/资源类型/SAG/ALIYUN::SAG::ACLAssociation.md#)
+-   [ALIYUN::SAG::ACLRule](cn.zh-CN/资源类型/SAG/ALIYUN::SAG::ACLRule.md#)
+-   [ALIYUN::SAG::SmartAccessGatewayBinding](cn.zh-CN/资源类型/SAG/ALIYUN::SAG::SmartAccessGatewayBinding.md#)
 
  |
-|SLS| -   [ALIYUN::SLS::ApplyConfigToMachineGroup](intl.zh-CN/资源类型/SLS/ALIYUN::SLS::ApplyConfigToMachineGroup.md#)
--   [ALIYUN::SLS::MachineGroup](intl.zh-CN/资源类型/SLS/ALIYUN::SLS::MachineGroup.md#)
+|SLB| -   [ALIYUN::SLB::AccessControl](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::AccessControl.md#)
+-   [ALIYUN::SLB::BackendServerAttachment](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::BackendServerAttachment.md#)
+-   [ALIYUN::SLB::BackendServerToVServerGroupAddition](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::BackendServerToVServerGroupAddition.md#)
+-   [ALIYUN::SLB::Certificate](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::Certificate.md#)
+-   [ALIYUN::SLB::DomainExtension](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::DomainExtension.md#)
+-   [ALIYUN::SLB::Listener](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::Listener.md#)
+-   [ALIYUN::SLB::LoadBalancer](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::LoadBalancer.md#)
+-   [ALIYUN::SLB::LoadBalancerClone](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::LoadBalancerClone.md#)
+-   [ALIYUN::SLB::MasterSlaveServerGroup](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::MasterSlaveServerGroup.md#)
+-   [ALIYUN::SLB::Rule](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::Rule.md#)
+-   [ALIYUN::SLB::VServerGroup](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::VServerGroup.md#)
 
  |
-|UIS| -   [ALIYUN::UIS::Uis](intl.zh-CN/资源类型/UIS/ALIYUN::UIS::Uis.md#)
--   [ALIYUN::UIS::UisConnection](intl.zh-CN/资源类型/UIS/ALIYUN::UIS::UisConnection.md#)
--   [ALIYUN::UIS::UisNode](intl.zh-CN/资源类型/UIS/ALIYUN::UIS::UisNode.md#)
+|SLS| -   [ALIYUN::SLS::ApplyConfigToMachineGroup](cn.zh-CN/资源类型/SLS/ALIYUN::SLS::ApplyConfigToMachineGroup.md#)
+-   [ALIYUN::SLS::MachineGroup](cn.zh-CN/资源类型/SLS/ALIYUN::SLS::MachineGroup.md#)
 
  |
-|VPC| -   [ALIYUN::VPC::EIP](intl.zh-CN/资源类型/VPC/ALIYUN::VPC::EIP.md#)
--   [ALIYUN::VPC::EIPAssociation](intl.zh-CN/资源类型/VPC/ALIYUN::VPC::EIPAssociation.md#)
--   [ALIYUN::VPC::PeeringRouterInterfaceBinding](intl.zh-CN/资源类型/VPC/ALIYUN::VPC::PeeringRouterInterfaceBinding.md#)
--   [ALIYUN::VPC::PeeringRouterInterfaceConnection](intl.zh-CN/资源类型/VPC/ALIYUN::VPC::PeeringRouterInterfaceConnection.md#)
--   [ALIYUN::VPC::RouterInterface](intl.zh-CN/资源类型/VPC/ALIYUN::VPC::RouterInterface.md#)
--   [ALIYUN::VPC::SnatEntry](intl.zh-CN/资源类型/VPC/ALIYUN::VPC::SnatEntry.md#)
+|UIS| -   [ALIYUN::UIS::Uis](cn.zh-CN/资源类型/UIS/ALIYUN::UIS::Uis.md#)
+-   [ALIYUN::UIS::UisConnection](cn.zh-CN/资源类型/UIS/ALIYUN::UIS::UisConnection.md#)
+-   [ALIYUN::UIS::UisNode](cn.zh-CN/资源类型/UIS/ALIYUN::UIS::UisNode.md#)
+
+ |
+|VPC| -   [ALIYUN::VPC::EIP](cn.zh-CN/资源类型/VPC/ALIYUN::VPC::EIP.md#)
+-   [ALIYUN::VPC::EIPAssociation](cn.zh-CN/资源类型/VPC/ALIYUN::VPC::EIPAssociation.md#)
+-   [ALIYUN::VPC::PeeringRouterInterfaceBinding](cn.zh-CN/资源类型/VPC/ALIYUN::VPC::PeeringRouterInterfaceBinding.md#)
+-   [ALIYUN::VPC::PeeringRouterInterfaceConnection](cn.zh-CN/资源类型/VPC/ALIYUN::VPC::PeeringRouterInterfaceConnection.md#)
+-   [ALIYUN::VPC::RouterInterface](cn.zh-CN/资源类型/VPC/ALIYUN::VPC::RouterInterface.md#)
+-   [ALIYUN::VPC::SnatEntry](cn.zh-CN/资源类型/VPC/ALIYUN::VPC::SnatEntry.md#)
 
  |
 
