--- a/cn.zh-CN/常用工具/命令行工具/使用示例（新）/资源相关.md
+++ b/cn.zh-CN/常用工具/命令行工具/使用示例（新）/资源相关.md
@@ -178,11 +178,11 @@ aliyun ros GetResourceTypeTemplate --ResourceType ALIYUN::ECS::VPC
 
 ## GetStackResource {#section_6bs_dww_7jd .section}
 
-查询某个堆栈的资源列表。
+查询某个资源栈的资源列表。
 
 |名称|类型|是否必选|示例值|描述|
 |--|--|----|---|--|
-|--RegionId|String|是|cn-hangzhou| 堆栈所属的地域ID。您可以调用[../DNROS19102457/ZH-CN\_TP\_1422641\_V1.dita\#doc\_api\_ROS\_DescribeRegions](../DNROS19102457/ZH-CN_TP_1422641_V1.dita#doc_api_ROS_DescribeRegions)查看最新的阿里云地域列表。
+|--RegionId|String|是|cn-hangzhou| 资源栈所属的地域ID。您可以调用[../DNROS19102457/ZH-CN\_TP\_1422641\_V1.dita\#doc\_api\_ROS\_DescribeRegions](../DNROS19102457/ZH-CN_TP_1422641_V1.dita#doc_api_ROS_DescribeRegions)查看最新的阿里云地域列表。
 
  |
 |--StackId|String|是|4a6c9851-3b0f-4f5f-b4ca-a14bf691\*\*\*\*| 资源栈ID。
@@ -229,7 +229,7 @@ aliyun ros GetStackResource --RegionId cn-beijing --StackId bd98e636-68e9-4632-8
 
 |名称|类型|是否必选|示例值|描述|
 |--|--|----|---|--|
-|--RegionId|String|是|cn-hangzhou| 堆栈所属的地域ID。您可以调用[../DNROS19102457/ZH-CN\_TP\_1422641\_V1.dita\#doc\_api\_ROS\_DescribeRegions](../DNROS19102457/ZH-CN_TP_1422641_V1.dita#doc_api_ROS_DescribeRegions)查看最新的阿里云地域列表。
+|--RegionId|String|是|cn-hangzhou| 资源栈所属的地域ID。您可以调用[../DNROS19102457/ZH-CN\_TP\_1422641\_V1.dita\#doc\_api\_ROS\_DescribeRegions](../DNROS19102457/ZH-CN_TP_1422641_V1.dita#doc_api_ROS_DescribeRegions)查看最新的阿里云地域列表。
 
  |
 |--StackId|String|是|4a6c9851-3b0f-4f5f-b4ca-a14bf691\*\*\*\*| 资源栈ID。
