--- a/cn.zh-CN/常用工具/命令行工具/使用示例（新）/模板相关.md
+++ b/cn.zh-CN/常用工具/命令行工具/使用示例（新）/模板相关.md
@@ -4,11 +4,11 @@
 
 ## GetTemplate {#section_gp1_ohg_nef .section}
 
-查询堆栈、更改集的详细信息。
+查询资源栈、更改集的详细信息。
 
 |名称|类型|是否必选|示例值|描述|
 |--|--|----|---|--|
-|--RegionId|String|是|cn-hangzhou| 模板所属堆栈的地域ID。您可以调用[../DNROS19102457/ZH-CN\_TP\_1422641\_V1.dita\#doc\_api\_ROS\_DescribeRegions](../DNROS19102457/ZH-CN_TP_1422641_V1.dita#doc_api_ROS_DescribeRegions)查看最新的阿里云地域列表。
+|--RegionId|String|是|cn-hangzhou| 模板所属资源栈的地域ID。您可以调用[../DNROS19102457/ZH-CN\_TP\_1422641\_V1.dita\#doc\_api\_ROS\_DescribeRegions](../DNROS19102457/ZH-CN_TP_1422641_V1.dita#doc_api_ROS_DescribeRegions)查看最新的阿里云地域列表。
 
  |
 |--StackId|String|否|4a6c9851-3b0f-4f5f-b4ca-a14bf691\*\*\*\*| 资源栈ID。
@@ -39,7 +39,7 @@ aliyun ros GetTemplate --RegionId cn-beijing  --StackId bd98e636-68e9-4632-82df-
 
 |名称|类型|是否必选|示例值|描述|
 |--|--|----|---|--|
-|--RegionId|String|是|cn-beijing| 堆栈所属的地域ID。您可以调用[../DNROS19102457/ZH-CN\_TP\_1422641\_V1.dita\#doc\_api\_ROS\_DescribeRegions](../DNROS19102457/ZH-CN_TP_1422641_V1.dita#doc_api_ROS_DescribeRegions)查看最新的阿里云地域列表。
+|--RegionId|String|是|cn-beijing| 资源栈所属的地域ID。您可以调用[../DNROS19102457/ZH-CN\_TP\_1422641\_V1.dita\#doc\_api\_ROS\_DescribeRegions](../DNROS19102457/ZH-CN_TP_1422641_V1.dita#doc_api_ROS_DescribeRegions)查看最新的阿里云地域列表。
 
  |
 |--Parameters.N.ParameterKey|String|否|InstanceId| 参数的名称。 如果未指定特定参数的名称和值，则ROS将使用模板中指定的默认值。
@@ -106,11 +106,11 @@ aliyun ros GetTemplateEstimateCost --TemplateBody "{'ROSTemplateFormatVersion': 
 
 ## ValidateTemplate {#section_a4f_50n_2ke .section}
 
-验证将要创建堆栈的模板。
+验证将要创建资源栈的模板。
 
 |名称|类型|是否必选|示例值|描述|
 |--|--|----|---|--|
-|--RegionId|String|否|cn-hangzhou| 堆栈模板所属的地域ID。您可以调用[../DNROS19102457/ZH-CN\_TP\_1422641\_V1.dita\#doc\_api\_ROS\_DescribeRegions](../DNROS19102457/ZH-CN_TP_1422641_V1.dita#doc_api_ROS_DescribeRegions)查看最新的阿里云地域列表。
+|--RegionId|String|否|cn-hangzhou| 资源栈模板所属的地域ID。您可以调用[../DNROS19102457/ZH-CN\_TP\_1422641\_V1.dita\#doc\_api\_ROS\_DescribeRegions](../DNROS19102457/ZH-CN_TP_1422641_V1.dita#doc_api_ROS_DescribeRegions)查看最新的阿里云地域列表。
 
  |
 |--TemplateBody|String|否|\{"ROSTemplateFormatVersion":"2015-09-01"\}| 包含模板体的结构，最小长度为1个字节，最大长度为51200个字节。
